# alius

./: .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOW_TO_ADD_MCP.md  LICENSE  MCP_ADD_QUICK.md  MCP_QUICK_REFERENCE.md  MCP_USER_GUIDE.md  README.cn.md  README.en.md  README.ja.md  README.md  RELEASE_NOTES_v0.1.0-sprint1.md  TESTING.md  npm-unpublish-request.md  release-please-config.json
crates/alius-cli/: Cargo.toml  build.rs
crates/alius-cli/src/: cli.rs  lib.rs  main.rs
crates/alius-config/: Cargo.toml
crates/alius-config/src/: lib.rs  settings.rs  soul.rs
crates/alius-formula/: Cargo.toml
crates/alius-formula/src/: lib.rs
crates/alius-interactive/: Cargo.toml
crates/alius-interactive/src/: lib.rs
crates/alius-interactive/src/repl/: mod.rs
crates/alius-interactive/src/ui/: mod.rs
crates/alius-mcp/: Cargo.toml
crates/alius-mcp/src/: lib.rs
crates/alius-model/: Cargo.toml
crates/alius-model/src/: agent.rs  agent_events.rs  anthropic_provider.rs  client.rs  conversation.rs  events.rs  lib.rs  openai_provider.rs  provider.rs  retry.rs
crates/alius-plugin/: Cargo.toml
crates/alius-plugin/src/: lib.rs
crates/alius-protocol/: Cargo.toml
crates/alius-protocol/src/: error.rs  lib.rs  message.rs  types.rs
crates/alius-store/: Cargo.toml
crates/alius-store/src/: conversation.rs  lib.rs  memory.rs  session.rs
crates/alius-tools/: Cargo.toml
crates/alius-tools/src/: lib.rs  permission.rs  registry.rs  traits.rs
crates/alius-tools/src/builtin/: code_stats.rs  create_dir.rs  delete_file.rs  edit_file.rs  find_files.rs  git_diff.rs  git_status.rs  http_request.rs  json.rs  list_dir.rs  mod.rs  move_file.rs  read_file.rs  search.rs  shell.rs  todo.rs  write_file.rs
crates/alius-workflow/: Cargo.toml
crates/alius-workflow/src/: lib.rs
entrypoints/cli/: Cargo.toml
entrypoints/cli/locales/: en.yml  ja.yml  zh-CN.yml
entrypoints/cli/src/: cli.rs  lib.rs  main.rs  mcp_handler.rs  testing.rs
entrypoints/cli/src/formula/: mod.rs
entrypoints/cli/src/mcp/: mod.rs
entrypoints/cli/src/plugin/: mod.rs
entrypoints/cli/src/repl/: commands.rs  completion.rs  keymap.rs  loop_request.rs  mod.rs  mode.rs  prompt.rs  protocol_bridge.rs  render.rs  session.rs
entrypoints/cli/src/tui/: app.rs  config_panel.rs  init_wizard.rs  mod.rs  model_select.rs  state.rs  testing.rs  theme.rs
entrypoints/cli/src/tui/components/: mod.rs  selectable_list.rs  step_indicator.rs  text_input.rs
entrypoints/cli/src/tui/workspace/: agent_team.rs  config_task.rs  conversation.rs  events.rs  git.rs  helpers.rs  interaction.rs  mod.rs  plans.rs  state_machine_tests.rs  status_bar.rs  (+1 more)
entrypoints/cli/src/ui/: mod.rs
entrypoints/cli/src/updater/: github.rs  installer.rs  mod.rs  platform.rs
entrypoints/cli/src/workflow/: confirmation.rs  mod.rs
entrypoints/cli/tests/: cli_dispatch_config.rs  cli_dispatch_extensions.rs  cli_parse.rs  cli_run.rs
entrypoints/embedded/: Cargo.toml  README.md
entrypoints/embedded/examples/esp32/: README.md  freertos_chat.cpp
entrypoints/embedded/include/: alius.h  alius.hpp
entrypoints/embedded/src/: error.rs  lib.rs  memory.rs  runtime.rs  stream.rs  types.rs
entrypoints/jsonrpc/: Cargo.toml
entrypoints/jsonrpc/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: core.rs  interface.rs  lib.rs  message.rs  testing.rs  types.rs
runtime/config/: Cargo.toml
runtime/config/src/: agent_card.rs  capability.rs  config_manager.rs  default.toml  error.rs  init_wizard.rs  lib.rs  merger.rs  migration.rs  project_init.rs  settings.rs  soul.rs  soul_source.rs  views.rs  workspace_archive.rs  workspace_template.rs
runtime/config/src/loaders/: config.rs  mod.rs  model_assignment.rs  permissions.rs  protocol.rs  providers.rs  soul.rs  tools.rs
runtime/core/: Cargo.toml
runtime/core/config/defaults/: config.toml  permissions.toml  protocol.toml  providers.toml  tools.toml
runtime/core/src/: a2a.rs  config.rs  event_adapter.rs  lib.rs  manager.rs  mcp_manager.rs  plan_store.rs  release_please_test.rs  runtime.rs  session.rs  testing.rs
runtime/core/src/logging/: audit.rs  error.rs  event_log.rs  log_query.rs  log_record.rs  log_writer.rs  mod.rs
runtime/core/src/loop_engine/: context.rs  context_manager.rs  convergence.rs  engine.rs  iteration.rs  mod.rs  model_step.rs  planner.rs  policy.rs  result.rs  tool_step.rs
runtime/core/src/patch/: backup.rs  conflict.rs  diff.rs  mod.rs
runtime/mcp/: Cargo.toml
runtime/mcp/src/: client.rs  lib.rs  protocol.rs  protocol_tests.rs  registry.rs  transport.rs
runtime/mcp/tests/: mcp_e2e.rs
runtime/mcp/tests/fixtures/: echo_mcp_server.py
runtime/memory/: Cargo.toml
runtime/memory/src/: bridge.rs  conversation.rs  lib.rs  paths.rs  session.rs
runtime/memory/src/episodic/: mod.rs  store.rs  types.rs
runtime/memory/src/procedural/: mod.rs  store.rs  types.rs
runtime/memory/src/retrieval/: engine.rs  mod.rs
runtime/memory/src/semantic/: mod.rs  store.rs  types.rs
runtime/model/: Cargo.toml
runtime/model/src/: agent.rs  agent_events.rs  anthropic_provider.rs  client.rs  conversation.rs  credential.rs  endpoint.rs  events.rs  google_provider.rs  http.rs  lib.rs  openai_provider.rs  provider.rs  retry.rs  router.rs  testing.rs
runtime/store/: Cargo.toml
runtime/store/src/: conversation.rs  lib.rs  memory.rs
runtime/tools/: Cargo.toml
runtime/tools/src/: lib.rs  mcp_bridge.rs  package.rs  permission.rs  policy.rs  registry.rs  testing.rs  traits.rs
runtime/tools/src/builtin/: code_stats.rs  create_dir.rs  delete_file.rs  edit_file.rs  find_files.rs  git_diff.rs  git_status.rs  http_request.rs  json.rs  list_dir.rs  mod.rs  move_file.rs  read_file.rs  search.rs  shell.rs  todo.rs  write_file.rs
runtime/tools/src/native/: fs.rs  local_service.rs  mod.rs  search_code.rs  shell.rs
runtime/tools/src/shell_gate/: authorizer.rs  inspector.rs  mod.rs  scope.rs
runtime/tools/src/wasm_host/: audit.rs  host.rs  imports.rs  mod.rs  tool_wrapper.rs
runtime/tools/tests/: native_registry.rs  shell_gate_integration.rs  wasm_plugin_integration.rs
(+230 files in other folders)
