[workspace]
resolver = "2"
members = [
    "crates/alius-cli",
    "crates/alius-interactive",
    "crates/alius-model",
    "crates/alius-config",
    "crates/alius-protocol",
    "crates/alius-store",
    "crates/alius-tools",
]

[workspace.package]
version = "1.4.0"
edition = "2021"
authors = ["Alius Tech"]
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# LLM - use rustls for TLS to avoid OpenSSL dependency for cross-compilation
async-openai = { version = "0.20", default-features = false, features = ["rustls"] }

# HTTP client - use rustls-tls for cross-compilation compatibility
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Internal crates
alius-protocol = { path = "crates/alius-protocol" }
alius-config = { path = "crates/alius-config" }
alius-model = { path = "crates/alius-model" }
alius-store = { path = "crates/alius-store" }
alius-tools = { path = "crates/alius-tools" }
alius-interactive = { path = "crates/alius-interactive" }
