[package]
name = "protocol-interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types and protocols for Alius"

[features]
default = ["std"]
std = []
embedded = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
