[package]
name = "alius-formula"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Formula repository management for Alius"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
