[package]
name = "alius-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LLM client for Alius"

[dependencies]
async-openai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = "0.1"
reqwest = { workspace = true }
bytes = { workspace = true }
alius-protocol = { workspace = true }
alius-config = { workspace = true }
alius-tools = { workspace = true }