[package]
name = "alius-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM plugin system for Alius"

[dependencies]
wasmtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
