[package]
name = "alius-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types and protocols for Alius"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }