[package]
name = "alius-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Session and conversation storage for Alius"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
alius-protocol = { workspace = true }