[package]
name = "alius-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Built-in tools for Alius"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

alius-protocol = { workspace = true }