[package]
name = "alius-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Workflow parser and executor for Alius"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
