[package]
name = "jsonrpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JSON-RPC 2.0 server entrypoint for Alius"

[features]
testing = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
protocol-interface = { workspace = true }
core-runtime = { workspace = true }
runtime-config = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
runtime-tools = { workspace = true }
core-runtime = { workspace = true, features = ["testing"] }
