[package]
name = "core-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core Runtime implementation for Alius"

[features]
default = ["std", "mcp"]
std = []
embedded = ["dep:critical-section"]
mcp = ["dep:runtime-mcp", "dep:dirs"]

[dependencies]
protocol-interface = { workspace = true }
runtime-config = { workspace = true }
runtime-model = { workspace = true }
runtime-store = { workspace = true }
runtime-tools = { workspace = true }
runtime-mcp = { workspace = true, optional = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tiktoken = { workspace = true }
regex = "1"
dirs = { version = "5", optional = true }
tracing = { workspace = true }

# Optional: for embedded mode
critical-section = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
