[package]
name = "runtime-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync"] }
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
tokio-test = "0.4"
