[package]
name = "runtime-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistence layer for Alius runtime"

[features]
testing = ["protocol-interface/testing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
protocol-interface = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = { workspace = true }
