[package]
name = "runtime-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistence layer for Alius runtime"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
protocol-interface = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
