[package]
name = "runtime-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tool system for Alius runtime"

[features]
default = ["mcp"]
mcp = ["dep:runtime-mcp"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
wasmtime = { workspace = true }
tracing = { workspace = true }
protocol-interface = { workspace = true }
runtime-mcp = { workspace = true, optional = true }

[dev-dependencies]
wat = "1"
